# tssdiff

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  config.example.yaml
.github/workflows/: auto-tag.yml  ci.yml  docs.yml  release.yml
crates/tssdiff-core/: Cargo.toml
crates/tssdiff-core/src/: agent.rs  config.rs  git.rs  highlight.rs  icons.rs  lib.rs  mode.rs  parser.rs  persistence.rs  puregit.rs  repo.rs  side_by_side.rs  theme.rs  tree.rs
crates/tssdiff-gui/: Cargo.toml  tauri.conf.json
crates/tssdiff-gui/capabilities/: default.json
crates/tssdiff-gui/src/: main.rs
crates/tssdiff-gui/ui/: index.html  main.js  style.css
crates/tssdiff-tui/: Cargo.toml
crates/tssdiff-tui/src/: cli.rs  main.rs  render.rs
docs/: agent-feedback.md
src/: agent.rs  cli.rs  config.rs  git.rs  highlight.rs  icons.rs  main.rs  persistence.rs  render.rs  side_by_side.rs  theme.rs
