[package]
name = "tssdiff"
version = "0.2.0"
edition = "2024"
rust-version = "1.85.0"
description = "A read-only TUI diff viewer with history browsing and side-by-side panes (fork of ftdv)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/msdshsk/tssdiff"
homepage = "https://github.com/msdshsk/tssdiff"
readme = "README.md"
keywords = ["diff", "git", "tui", "terminal", "viewer"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Kei Watanabe wtnqk <okgoglehisiri@gmail.com>"]
exclude = [
  ".github/",
  ".gitignore",
  "Makefile",
  "*.md",
  "!README.md",
  "!CHANGELOG.md",
  "!LICENSE*",
]

[dependencies]
ratatui = "0.29.0"
crossterm = { version = "0.29", features = ["use-dev-tty"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
dirs = "6.0"
tempfile = "3.20"
ansi-to-tui = "7.0"
strip-ansi-escapes = "0.2"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
similar = "3"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
arboard = { version = "3", default-features = false }
unicode-width = "0.2"

[dev-dependencies]

[[bin]]
name = "tssdiff"
path = "src/main.rs"

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }
