[workspace]
resolver = "3"
members = ["crates/tssdiff-core", "crates/tssdiff-tui", "crates/tssdiff-gui"]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/msdshsk/tssdiff"
homepage = "https://github.com/msdshsk/tssdiff"
authors = ["Kei Watanabe wtnqk <okgoglehisiri@gmail.com>"]

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tempfile = "3.20"

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
