[package]
name = "tssdiff"
description = "A read-only TUI diff viewer with history browsing and side-by-side panes (fork of ftdv)"
readme = "../../README.md"
keywords = ["diff", "git", "tui", "terminal", "viewer"]
categories = ["command-line-utilities", "development-tools"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
tssdiff-core = { path = "../tssdiff-core", version = "0.2.0", features = ["clap"] }
ratatui = "0.29.0"
crossterm = { version = "0.29", features = ["use-dev-tty"] }
anyhow.workspace = true
ansi-to-tui = "7.0"
strip-ansi-escapes = "0.2"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
unicode-width = "0.2"

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true

[[bin]]
name = "tssdiff"
path = "src/main.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }
